# Atomix

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  docs_review_prompt.md  generate_charts.py  test_output.txt
.agent/: AGENTS.md  codebase-map.json
.agents/: codebase-map.json
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_0f0639eb-21ea-4900-9014-9f07512e6311.md  plan-sess_3366c8fe-e9d1-451a-a46d-8c1f45446a93.md  plan-sess_afa61dde-af1a-4a59-9bfe-fda629dfbf6d.md  plan-sess_e651dfa6-5baa-45a0-a6e0-6c4d62fb9954.md  plan-sess_ede1383b-d525-4d9f-a0ba-ff727a51d000.md
docs/: 01-总纲与哲学.md  02-指令集规范.md  03-编译行为.md  04-编译管线.md  05-通信协议.md  06-外围工具.md  07-Runner.md  07-执行器设计.md  08-运行时架构.md  09-配置设计.md  10-命令行规范.md  11-策略模块.md  12-debugger-设计.md  13-sdk-设计.md  14-Atomix-Rust-实现任务文档.md  atxp.proto  example.atx  index.md  外围工具.md  执行器设计.md  策略模块.md  编译管线.md  编译行为.md  设计完备性矩阵.md  运行时架构.md  配置设计.md
docs/AEP/: 000-模板.md  001-装饰器统一规范.md  002-增量编译.md  003-指令优化策略.md  004-LLVM后端兼容性-BETA.md  005-装饰器系统增强——一切皆可装饰器.md  006-keyword元装饰器——关键字声明与注册.md  README.md
docs/sim/: adaptive_controller.py  build_pdf.py  executor.py  generate_charts.py  report_generator.py  run_all.py  scenarios.py  slot_manager.py
docs/语法设计/: EBNF语法.md  INPUT语法.md  IO语法.md  OUT语法.md  TASK语法.md  TOOLS语法.md  WORKS语法.md  关键字参考.md  内置函数.md  包管理.md  区外语法.md  标准库.md  (+2 more)
scripts/: gen-icon.py  gen-index.py
sim/: __init__.py  adaptive_controller.py  config.py  executor.py  hardware_model.py  load_balancer.py  main.py  metrics.py  regression_model.py  report_generator.py  scenarios.py  simulation.py  slot_manager.py  task_generator.py  visualizer.py
src/: lib.rs  origin.rs
syntaxes/: atomix.tmLanguage.json
task/: helloworld.atx
tests/: compile_test.rs  edge_cases_test.rs  monomorphization_test.rs
(+156 files in other folders)
